Fixed mobile menu colour & spacing.

--- a/themes/wirehaiku/assets/query-colours.scss
+++ b/themes/wirehaiku/assets/query-colours.scss
@@ -21,7 +21,7 @@
 
         input,
         label {
-            color: $nord4;
+            color: $nord5;
         }
     }
 
