--- a/themes/wirehaiku/assets/query-mobile.scss
+++ b/themes/wirehaiku/assets/query-mobile.scss
@@ -27,7 +27,7 @@
             cursor: pointer;
             display: inline-block;
             font-size: 1.125rem;
-            margin: 1rem 0;
+            margin: 1rem 0 0.5rem;
 
             &::after {
                 content: " +";
